--- a/Generate JFlex for HTML Coded Characters.ipynb
+++ b/Generate JFlex for HTML Coded Characters.ipynb
@@ -44,28 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('&#38;', '&'),\n",
-       " ('&#42;', '*'),\n",
-       " ('&#45;', '-'),\n",
-       " ('&#58;', ':'),\n",
-       " ('&#59;', ';'),\n",
-       " ('&#60;', '<'),\n",
-       " ('&#61;', '='),\n",
-       " ('&#62;', '>'),\n",
-       " ('&#63;', '?')]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('&#38;', '&')\n",
+      "('&#42;', '*')\n",
+      "('&#45;', '-')\n",
+      "('&#58;', ':')\n",
+      "('&#59;', ';')\n",
+      "('&#60;', '<')\n",
+      "('&#61;', '=')\n",
+      "('&#62;', '>')\n",
+      "('&#63;', '?')\n"
+     ]
     }
    ],
    "source": [
@@ -77,12 +74,12 @@
     "            i.strip()+';',\n",
     "            unescape(i).strip(),\n",
     "        ))\n",
-    "chars"
+    "print('\\n'.join(map(str,chars)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -91,24 +88,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "&#38;+ {System.out.print(\"&\");}\n",
-      "&#42;+ {System.out.print(\"*\");}\n",
-      "&#45;+ {System.out.print(\"-\");}\n",
-      "&#58;+ {System.out.print(\":\");}\n",
-      "&#59;+ {System.out.print(\";\");}\n",
-      "&#60;+ {System.out.print(\"<\");}\n",
-      "&#61;+ {System.out.print(\"=\");}\n",
-      "&#62;+ {System.out.print(\">\");}\n",
-      "&#63;+ {System.out.print(\"?\");}\n"
+      "&#38; {System.out.print(\"&\");}\n",
+      "&#42; {System.out.print(\"*\");}\n",
+      "&#45; {System.out.print(\"-\");}\n",
+      "&#58; {System.out.print(\":\");}\n",
+      "&#59; {System.out.print(\";\");}\n",
+      "&#60; {System.out.print(\"<\");}\n",
+      "&#61; {System.out.print(\"=\");}\n",
+      "&#62; {System.out.print(\">\");}\n",
+      "&#63; {System.out.print(\"?\");}\n"
      ]
     }
    ],
    "source": [
-    "# generate JFles/Java code from the regexes/coded chars and unescaped versions\n",
+    "# generate JFlex/Java code from the regexes/coded chars and unescaped versions\n",
     "lines = []\n",
     "for c in chars:\n",
-    "    lines.append('{}+ {{System.out.print(\"{}\");}}'.format(c[0], c[1]))\n",
-    "print('\\n'.join(lines))"
+    "    lines.append('{} {{System.out.print(\"{}\");}}'.format(c[0], c[1]))\n",
+    "for line in lines:\n",
+    "    print(line)"
    ]
   },
   {
